--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "big-project",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
+  "main": "src/script.js",
   "scripts": {
     "start": "node server.js"  
   },
